# nushell

./: .gitignore  .gitmodules  CONTAINER_SETUP_SUMMARY.md  Cargo.toml  EVENT_FIELD_ACCESS_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SURVEY.md  LANGUAGE_EXTENSIONS.md  README_EBPF_SETUP.md  container_setup.sh  ebpf-dev-simple.yaml  ebpf-dev.yaml  lima-x86.yaml  setup-x86-ebpf.sh  test-attach.nu  test-basic.nu  test-bpftrace.sh  test-dry.nu  test-ebpf-debug.nu  test-ebpf-simple.sh  test-ebpf.nu  test-no-closure.nu  test-print.nu  test-real.nu  test-simple.nu  test_ebpf_lima.sh  test_ebpf_parser.nu  test_ebpf_simple.nu  test_ebpf_stream.nu
crates/nu-cmd-ebpf/: Cargo.toml  README.md
crates/nu-cmd-ebpf/src/: bpf_kprobe.rs  codegen.rs  compiler.rs  ebpf_utils.rs  lib.rs  loader.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/: default_context.rs  lib.rs
crates/nu-command/src/ebpf/: bpf_kprobe.rs  mod.rs
crates/nu-command/tests/commands/: bpf_kprobe.rs  mod.rs
crates/nu-ebpf/: Cargo.toml  GAPS.md  README.md
crates/nu-ebpf/docs/: BTF_ARCHITECTURE.md
crates/nu-ebpf/src/: codegen_v2.rs  control_flow.rs  lib.rs  loader.rs  statement_gen.rs  symbolize.rs
crates/nu-ebpf/src/commands/: attach.rs  counters.rs  detach.rs  events.rs  helpers.rs  histogram.rs  list.rs  mod.rs  stacks.rs  trace.rs
crates/nu-ebpf/src/compiler/: btf.rs  cfg.rs  elf.rs  graph_coloring.rs  hindley_milner.rs  instruction.rs  ir_ops.rs  ir_to_ebpf.rs  ir_to_mir.rs  mir.rs  mir_to_ebpf.rs  mod.rs  regalloc.rs  register_alloc.rs  type_infer.rs
crates/nu-ebpf/src/compiler/helpers/: aggregation.rs  data.rs  filter.rs  mod.rs  output.rs  timing.rs
crates/nu-ebpf/src/compiler/passes/: branch_opt.rs  const_fold.rs  copy_prop.rs  dce.rs  mod.rs  ssa.rs  ssa_destruct.rs  strength.rs
crates/nu-ebpf/src/kernel_btf/: mod.rs  pt_regs.rs  service.rs  tracepoint.rs  types.rs
crates/nu_plugin_ebpf/: Cargo.toml
crates/nu_plugin_ebpf/src/: ebpf_plugin.rs  lib.rs  loader.rs  main.rs  parser.rs  probe_context.rs  streaming.rs
crates/nu_plugin_ebpf/src/commands/: bpf_kprobe.rs  bpf_stream.rs  bpf_tracepoint.rs  mod.rs
crates/nu_plugin_ebpf/tests/: field_access_codegen_test.rs  field_access_full_example.rs  field_access_tests.rs  improved_codegen_test.rs  integration_tests.rs  loader_tests.rs  parser_tests.rs
ebpf_dev/: README.md
ebpf_dev/docs/: ast_analysis.md  nushell_internals_reference.md
examples/: ebpf_demos.nu
scripts/: test-ebpf-builtin.nu  test-ebpf-lima-wrapper.sh  test-ebpf-lima.sh  test-ebpf-linux.sh  test-ebpf-quick.sh  test-ebpf-real-examples.sh  verify-ebpf-codegen.nu
