[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's eBPF commands"
edition = "2024"
license = "MIT"
name = "nu-cmd-ebpf"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-cmd-ebpf"
version = "0.104.2"

[lib]
bench = false

[lints]
workspace = true

[dependencies]
nu-cmd-base = { path = "../nu-cmd-base", version = "0.104.2" }
nu-engine = { path = "../nu-engine", version = "0.104.2", default-features = false }
nu-parser = { path = "../nu-parser", version = "0.104.2" }
nu-protocol = { path = "../nu-protocol", version = "0.104.2", default-features = false }
nu-utils = { path = "../nu-utils", version = "0.104.2", default-features = false }
nu-ebpf = { path = "../nu-ebpf", version = "0.104.2" }

# External dependencies from workspace
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
aya = { version = "0.13" }
aya-log = "0.2"

[dev-dependencies]
nu-test-support = { path = "../nu-test-support", version = "0.104.2" }