[package]
authors = ["The Nushell Project Developers"]
description = "eBPF code generation utilities for Nushell"
edition = "2024"
license = "MIT"
name = "nu-ebpf"
version = "0.104.2"
repository = "https://github.com/nushell/nushell"

[lib]
bench = false

[dependencies]
nu-protocol = { path = "../nu-protocol", version = "0.104.2" }

[lints]
workspace = true
